menu spacing fixed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,6 @@
 :root {
   --dark-grey: rgb(216, 216, 216);
-  --light-white: rgb(255, 255, 255);
+  --light-white: rgb(0, 0, 0);
 }
 
 #root {
