--- a/client/src/Components/Menu/Menu.css
+++ b/client/src/Components/Menu/Menu.css
@@ -18,27 +18,42 @@
   overflow-y: scroll;
 }
 
-.cat-container {
-  flex: 1;
-}
-
 .item-container {
   flex: 1;
 }
 
-.option {
+.item-head {
+  flex: 1;
   display: flex;
-  flex-direction: row;
-  text-align: center;
-}
-
-.btn {
-  border:0;
-  background-color: transparent;
-  outline: none;
+  justify-content: space-between;
 }
 
 .item-price {
   display: flex;
   align-items: flex-end;
 }
+
+.option-container {
+  flex: 1;
+}
+
+.option {
+  display: flex;
+  justify-content: space-between;
+}
+
+.option-select {
+  display: flex;
+}
+
+.option-price {
+  margin-right: 20px;
+}
+
+.btn {
+  border:0;
+  background-color: transparent;
+  padding: 0px 3px 3px 1px;
+  outline: none;
+}
+
